<?xml version="1.0"?>
<package format="3">
  <name>visual_perception_inference</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper node to run YOLO26 on Hailo Accelerator.</description>

  <maintainer email="christian.stamm@zf.com">Christian Stamm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visual_perception_interface</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
